--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="layui-row">  
       <div class="layui-col-xs12 layui-col-sm6 layui-col-md4 bg float-center">
         <div class="avatar">
-            <img id="nan" src="https://img2.woyaogexing.com/2020/05/12/07ba73cc69a24df4ab23dfe47a81d83f!400x400.jpeg">
-            <img id="nv" src="https://img2.woyaogexing.com/2020/05/12/4d7de1fc9f964927bfc92c50a0d1f56c!400x400.jpeg">
+            <img id="nan" src="./hia.jpg">
+            <img id="nv" src="./ai.jpg">
         </div>
         <div class="text-center"><p>我们相恋了 好吧正在接受异地恋</p><p id="elapseClock"></p></div>
         <div class="text-center" style="margin-top: 120px;">
@@ -58,7 +58,7 @@
         
         $('.btn').click(function(event) {
           console.log('test');
-          layer.msg('wy 其实我在那首歌出来之前在长沙上网就见过你 那时候心里是没人的毕竟上学 喜欢而已 没谈过恋爱 却唱了特别的人 我在听你在唱 等你！！！');
+          layer.msg('wy 其实我在那首歌出来之前在长沙上网就见过你 那时候心里是没人的毕竟上学 喜欢而已 笑笑是爱称 没谈过恋爱 却唱了特别的人 我在听你在唱 等你！！！');
           //window.location.href='https://www.aeink.com';
         });
          
