--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="layui-row">  
       <div class="layui-col-xs12 layui-col-sm6 layui-col-md4 bg float-center">
         <div class="avatar">
-            <img id="nan" src="./hia.jpg">
-            <img id="nv" src="./ai.jpg">
+            <img id="nan" src="./blob/main/hia.jpg">
+            <img id="nv" src="./blob/main/ai.jpg">
         </div>
         <div class="text-center"><p>我们相恋了 好吧正在接受异地恋</p><p id="elapseClock"></p></div>
         <div class="text-center" style="margin-top: 120px;">
